# devops-brain

./: .env  .env.example  .env.infra  .env.infra.example  .env.local-with-remote-infra.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.infra.yml  pyproject.toml
docker/postgres/: init-multiple-dbs.sh
docs/: dev-plan.md  enterprise-plan.md  enterprise-review-engine-plan.md
migrations/: env.py
migrations/versions/: 20260630_0001_create_review_tables.py  20260701_0002_add_review_task_runtime_fields.py  20260701_0003_create_gitlab_comment_records.py  20260701_0004_create_audit_logs.py  20260701_0005_create_review_knowledge.py  20260701_0006_add_review_knowledge_active.py  20260701_0007_create_review_diff_files.py  20260701_0008_create_review_plans.py  20260701_0009_add_agent_review_package_fields.py
src/agents/: __init__.py  architecture.py  knowledge_context.py  orchestrator.py  quality.py  security.py  summary.py
src/api/: globals.py  server.py
src/core/: state.py  workflow.py
src/db/: base.py  config.py  session.py  types.py
src/models/: __init__.py  agent_review.py  approval_record.py  audit_log.py  gitlab_comment_record.py  review_diff_file.py  review_knowledge.py  review_package.py  review_plan.py  review_task.py
src/queue/: __init__.py  jobs.py  redis_client.py  (+1 more)
tests/: test_agents.py  test_agents_integration.py  test_approval_api.py  test_db_models.py  test_diff_analyzer.py  test_gitlab_client.py  test_graph_basic.py  test_knowledge_retrieval.py  test_review_planner.py  test_summary.py  test_webhook_queue.py
(+13 files in other folders)
